Fix Profile Alignment Bug - Ultra

--- a/Ultra/Ultra.css
+++ b/Ultra/Ultra.css
@@ -663,3 +663,30 @@ code {
 .header-2Kx1US.ChannelDms-channelmembers-header.topPill-3DJJNV {
     background: var(--background-primary) !important;
 }
+
+.bannerSVGWrapper-qc0szY mask {
+    display: none;
+}
+
+.userPopout-2j1gM4 .wrapper-1VLyxH::before,
+.avatar-3QF_VA::before {
+    content: " ";
+    font-size: 0px;
+    background-color: var(--background-floating);
+    float: left;
+    border-radius: 50%;
+    height: 94px;
+    width: 94px;
+    margin: -7px;
+}
+
+.avatar-3QF_VA::before {
+    height: 136px;
+    width: 136px;
+    margin: -8px;
+}
+
+.userPopout-2j1gM4 [class^="avatarWrapper"] .wrapper-1VLyxH,
+.avatarHint-k7pYop {
+    top: 9px;
+}
